WIP: Fix PHPCS and PHPStorm Inspections in generated project.

--- a/Skeleton/Api/Application/Command/Handler/Decorator/NewCommandHandlerDecorator.php.twig
+++ b/Skeleton/Api/Application/Command/Handler/Decorator/NewCommandHandlerDecorator.php.twig
@@ -37,8 +37,7 @@ class NewCommandHandlerDecorator extends AbstractCommandHandlerDecorator
         CommandHandlerInterface $commandHandler,
         CommandValidationHandlerInterface $validationHandler,
         AbstractCommandSpecHandler $specHandler
-    )
-    {
+    ) {
         parent::__construct($commandHandler);
         $this->validationHandler = $validationHandler;
         $this->specHandler = $specHandler;
@@ -48,6 +47,7 @@ class NewCommandHandlerDecorator extends AbstractCommandHandlerDecorator
      * Method to decorate (override)
      *
      * @param CommandInterface $command
+     * @throws \Exception
      * @return mixed
      */
     public function process(CommandInterface $command)
