--- a/Skeleton/Api/Infrastructure/Persistence/TraitEntityName.php.twig
+++ b/Skeleton/Api/Infrastructure/Persistence/TraitEntityName.php.twig
@@ -5,6 +5,12 @@ namespace {{ projectName }}\Infrastructure\Persistence\Repository\{{ entityName 
 
 use {{ projectName }}\Domain\Entity\{{ entityName }};
 
+/**
+ * Trait TraitEntityName.
+ *
+ * @category {{ projectName }}
+ * @package Infrastructure
+ */
 trait TraitEntityName
 {
     /**
