--- a/Skeleton/Api/InfrastructureBundle/DependencyInjection/Configuration.php.twig
+++ b/Skeleton/Api/InfrastructureBundle/DependencyInjection/Configuration.php.twig
@@ -9,17 +9,21 @@ use Symfony\Component\Config\Definition\ConfigurationInterface;
 /**
  * This is the class that validates and merges configuration from your app/config files
  *
- * To learn more see {@link http://symfony.com/doc/current/cookbook/bundles/extension.html#cookbook-bundles-extension-config-class}
+ * To learn more see {@link http://tiny.cc/x1oney}
  */
 class Configuration implements ConfigurationInterface
 {
-    /**
-     * {@inheritdoc}
-     */
-    public function getConfigTreeBuilder()
-    {
-        const TYPE_DBMS = ['orm', 'odm', 'couchdb'];
+    const TYPE_DBMS = ['orm', 'odm', 'couchdb'];
 
+    /**
+     * Generates the configuration tree builder.
+     *
+     * @return TreeBuilder The tree builder.
+     * @throws \InvalidArgumentException When the node type is not valid.
+     * @throws \RuntimeException When the node type is not supported.
+     */
+    public function getConfigTreeBuilder(): TreeBuilder
+    {
         $treeBuilder = new TreeBuilder();
         $rootNode = $treeBuilder->root('{{ projectName|lower }}_infrastructure');
 
@@ -38,8 +42,7 @@ class Configuration implements ConfigurationInterface
                     ->validate()
                     ->cannotBeEmpty()
                 ->end()
-            ->end()
-        ;
+            ->end();
         return $treeBuilder;
     }
 }
