--- a/Skeleton/Api/Presentation/Request/PatchRequest.php.twig
+++ b/Skeleton/Api/Presentation/Request/PatchRequest.php.twig
@@ -34,9 +34,9 @@ class PatchRequest extends AbstractRequest implements CommandRequestInterface
     ];
 
     /**
-     * setOptions
-     *
      * Set options from the request body and add the entity identifier.
+     *
+     * @throws \LogicException
      */
     protected function setOptions()
     {
