--- a/Skeleton/Api/Domain/Entity/entity.php.twig
+++ b/Skeleton/Api/Domain/Entity/entity.php.twig
@@ -99,19 +99,20 @@ class {{ entityName }}
     /**
      * Create a new instance of {{ entityName }} entity.
      * @param int $tenantId
-{% for field in entityFields %}     * @param {% if field.type == "id" %}int{% elseif field.type == "IdVO" %}string{% else %}{{ field.type }}{% endif %} ${{ field.name }}
-{% endfor %}
+{% for field in entityFields %}     * @param {% if field.type == "id" %}int{% elseif field.type == "idVO" %}string{% else %}{{ field.type }}{% endif %} ${{ field.name }}
+{% endfor %}{% if throwException %}     * @throws DomainException
+{% endif %}
      * @return {{ entityName }}
      */
-     public static function makeInstance($tenantId, {{ constructorArgs }})
-     {
-         return new self($tenantId, {% for field in entityFields %}${{ field.name }}{% if loop.index < entityFields|length %}, {% endif %}{% endfor %});
-     }
+    public static function makeInstance($tenantId, {{ constructorArgs }})
+    {
+        return new self($tenantId, {% for field in entityFields %}${{ field.name }}{% if loop.index < entityFields|length %}, {% endif %}{% endfor %});
+    }
 
     /**
      * Constructor
      * @param int $tenantId
-{% for field in entityFields %}     * @param {% if field.type == "id" %}int{% elseif field.type == "IdVO" %}string{% else %}{{ field.type }}{% endif %} ${{ field.name }}
+{% for field in entityFields %}     * @param {% if field.type == "id" %}int{% elseif field.type == "idVO" %}string{% else %}{{ field.type }}{% endif %} ${{ field.name }}
 {% endfor %}{% if throwException %}     * @throws DomainException
 {% endif %}
      */
@@ -133,22 +134,29 @@ class {{ entityName }}
 {% if field.type == "id" or field.type == "idVO" %}
     /**
      * Get the id of entity.
-     * @return {% if field.type == "id" %}int
+     * @return {% if field.type == "id" %}{% if field.voName is defined %}{{ field.voName }}
+{% else %}int
+{% endif %}
 {% else %}string
 {% endif %}
      */
-    public function get{{ field.type|ucfirst }}()
+    public function get{{ field.type|ucfirst }}(): {% if field.type == "id" %}{% if field.voName is defined %}{{ field.voName }}
+{% else %}int
+{% endif %}
+{% else %}string
+{% endif %}
     {
         return $this->{{ field.type }};
     }
 
     /**
      * Set the id of entity.
-     * @return $this
+     * @param {% if field.type == "id" %}{% if field.voName is defined %}{{ field.voName }}{% else %}int{% endif %}{% else %}string{% endif %} $value
+     * @return {{ entityName }}
      */
-    public function set{{ field.name|ucfirst }}($value)
+    public function set{{ field.type|ucfirst }}({% if field.type == "id" %}{% if field.voName is defined %}{{ field.voName }}{% else %}int{% endif %}{% else %}string{% endif %} $value): self
     {
-        $this->{{ field.name }} = $value;
+        $this->{{ field.type }} = $value;
         return $this;
     }
 {% else %}
@@ -167,17 +175,17 @@ class {{ entityName }}
      * Get the {{ field.name }} attribute value.
      * @return {{ field.type }}
      */
-    public function get{{ field.name|ucfirst }}()
+    public function get{{ field.name|ucfirst }}(): {{ field.type }}
     {
         return $this->{{ field.name }};
     }
 
     /**
      * Set the {{ field.name|ucfirst }} attribute.
-     * @param {% if namespace %}{{ namespace }} {% endif %}{{ field.type }} $value
-     * @return $this
+     * @param {% if namespace %}{{ namespace }}{% else %}{{ field.type }}{% endif %} $value
+     * @return {{ entityName }}
      */
-    public function set{{ field.name|ucfirst }}({% if namespace %}{{ namespace }} {% endif %}$value)
+    public function set{{ field.name|ucfirst }}({% if namespace %}{{ namespace }}{% else %}{{ field.type }}{% endif %} $value): self
     {
         $this->{{ field.name }} = $value;
         return $this;
