--- a/Skeleton/Api/InfrastructureBundle/DependencyInjection/Compiler/CreateDynamicConnectionPass.php.twig
+++ b/Skeleton/Api/InfrastructureBundle/DependencyInjection/Compiler/CreateDynamicConnectionPass.php.twig
@@ -6,7 +6,18 @@ namespace {{ projectName }}\InfrastructureBundle\DependencyInjection\Compiler;
 use Symfony\Component\DependencyInjection\Compiler\CompilerPassInterface;
 use Symfony\Component\DependencyInjection\ContainerBuilder;
 use Symfony\Component\DependencyInjection\Reference;
+use Symfony\Component\DependencyInjection\Exception\{
+    InvalidArgumentException,
+    ServiceNotFoundException
+};
 
+/**
+ * Class CreateDynamicConnectionPass.
+ *
+ * @category {{ projectName }}
+ * @package InfrastructureBundle
+ * @subpackage DependencyInjection\Compiler
+ */
 class CreateDynamicConnectionPass implements CompilerPassInterface
 {
     const TYPE_DBMS = [
@@ -19,6 +30,8 @@ class CreateDynamicConnectionPass implements CompilerPassInterface
      * You can modify the container here before it is dumped to PHP code.
      *
      * @param ContainerBuilder $container
+     * @throws ServiceNotFoundException
+     * @throws InvalidArgumentException
      */
     public function process(ContainerBuilder $container)
     {
@@ -26,11 +39,12 @@ class CreateDynamicConnectionPass implements CompilerPassInterface
         $type = strtoupper($container->getParameter('database_type'));
 
         // create service
-        $class = $container->getParameter("project.dddcontext.listener.kernel.request.dynamic_database_${type}.class");
+        $parameterName = 'project.dddcontext.listener.kernel.request.dynamic_database_%s.class';
+        $class = $container->getParameter(sprintf($parameterName, $type));
         $id = 'project.dddcontext.listener.kernel.request.dynamic_database';
         // set service
         $definition = $container->getDefinition($id);
         $definition->setClass($class);
-        $definition->addArgument(new Reference(self::TYPE_DBMS[$type]);
+        $definition->addArgument(new Reference(self::TYPE_DBMS[$type]));
     }
 }
