--- a/Skeleton/Api/Presentation/Coordination/Controller/Controller.php.twig
+++ b/Skeleton/Api/Presentation/Coordination/Controller/Controller.php.twig
@@ -10,8 +10,8 @@ use Sfynx\DddBundle\Layer\Application\Generalisation\Interfaces\{{ group }}Handl
 use Symfony\Component\HttpFoundation\Response;
 
 {% for commandQueryResponsibilitySegregation in controllerData %}
+use {{ projectName }}\Application\{{ entityName }}\{{ group }}\Handler\{{ commandQueryResponsibilitySegregation.action|ucfirst }}{{ group }}Handler;
 use {{ projectName }}\Presentation\Adapter\{{ entityName }}\{{ group }}\{{ commandQueryResponsibilitySegregation.action|ucfirst }}{{ group }}Adapter;
-use {{ projectName }}\Presentation\Adapter\{{ entityName }}\{{ group }}\{{ commandQueryResponsibilitySegregation.action|ucfirst }}{{ group }}Handler;
 use {{ projectName }}\Presentation\Request\{{ entityName }}\{{ group }}\{{ commandQueryResponsibilitySegregation.action|ucfirst }}Request;
 
 {% endfor %}
