--- a/Skeleton/Api/PresentationBundle/DependencyInjection/Compiler/ResettingListenersPass.php.twig
+++ b/Skeleton/Api/PresentationBundle/DependencyInjection/Compiler/ResettingListenersPass.php.twig
@@ -5,6 +5,10 @@ namespace {{ projectName }}\PresentationBundle\DependencyInjection\Compiler;
 
 use Symfony\Component\DependencyInjection\ContainerBuilder;
 use Symfony\Component\DependencyInjection\Compiler\CompilerPassInterface;
+use Symfony\Component\DependencyInjection\Exception\{
+    InvalidArgumentException,
+    ServiceNotFoundException
+};
 
 /**
  * This is the class that loads and manages your bundle configuration
@@ -18,7 +22,11 @@ use Symfony\Component\DependencyInjection\Compiler\CompilerPassInterface;
 class ResettingListenersPass implements CompilerPassInterface
 {
     /**
-     * {@inheritDoc}
+     * You can modify the container here before it is dumped to PHP code.
+     *
+     * @param ContainerBuilder $container
+     * @throws ServiceNotFoundException
+     * @throws InvalidArgumentException
      */
     public function process(ContainerBuilder $container)
     {
