Add phpunit configuration file

--- a/Skeleton/Api/Domain/Service/CouchDB/RepositoryFactory.php.twig
+++ b/Skeleton/Api/Domain/Service/CouchDB/RepositoryFactory.php.twig
@@ -20,9 +20,9 @@ use {{ projectName }}\Infrastructure\Persistence\Repository\{{ entityName }}\Cou
  * @package Domain
  * @subpackage Service\CouchDB
  */
-class RepositoryFactory implements RepositoryFactoryInterface
+class RepositoryFactory //implements RepositoryFactoryInterface
 {
-    use TraitRepositoryFactory;
+    //use TraitRepositoryFactory;
 
     /**
      * Build the repository depending on required action.
