--- a/Skeleton/Api/InfrastructureBundle/DependencyInjection/Compiler/CreateDynamicConnectionPass.php.twig
+++ b/Skeleton/Api/InfrastructureBundle/DependencyInjection/Compiler/CreateDynamicConnectionPass.php.twig
@@ -21,9 +21,9 @@ use Symfony\Component\DependencyInjection\Exception\{
 class CreateDynamicConnectionPass implements CompilerPassInterface
 {
     const TYPE_DBMS = [
-        'ORM' => 'doctrine.orm.entity_manager',
-        'ODM' => 'doctrine_mongodb.odm.default_document_manager',
-        'COUCHDB' => 'doctrine_couchdb.odm.default_document_manager'
+        'orm' => 'doctrine.orm.entity_manager',
+        'odm' => 'doctrine_mongodb.odm.default_document_manager',
+        'couchdb' => 'doctrine_couchdb.odm.default_document_manager'
     ];
 
     /**
