modification of phpunit.xml

--- a/Skeleton/Api/Domain/Service/Orm/RepositoryFactory.php.twig
+++ b/Skeleton/Api/Domain/Service/Orm/RepositoryFactory.php.twig
@@ -15,7 +15,7 @@ use {{ projectName }}\Infrastructure\Persistence\Repository\{{ entityName }}\Orm
     DeleteManyRepository,
     DeleteRepository,
     GetByIdsRepository,
-    OneRepository,
+    GetRepository,
     SearchByRepository
 };
 use {{ projectName }}\Domain\Repository\{{ entityName }}RepositoryInterface;
