--- a/Skeleton/Api/Tests/Domain/Service/Manager/ManagerTest.php.twig
+++ b/Skeleton/Api/Tests/Domain/Service/Manager/ManagerTest.php.twig
@@ -19,7 +19,15 @@ use Sfynx\DddBundle\Layer\Infrastructure\Validator\Constraint\IdValidator;
 {% set args = "" %}
 {% for field in entityFields %}
     {% if field.type != "id" %}
-        {% set args = args ~ "0123,"  %}
+        {% if field.type=="number" %}
+            {% set args = args ~ "123,"  %}
+        {% else %}
+            {% if field.type=="boolean" %}
+                {% set args = args ~ "true,"  %}
+            {% else %}
+                {% set args = args ~ "'abc',"  %}
+            {% endif %}
+        {% endif %}
     {% endif %}
 {% endfor %}
 
