--- a/Skeleton/Api/Tests/phpunit.php.twig
+++ b/Skeleton/Api/Tests/phpunit.php.twig
@@ -15,6 +15,9 @@
         <whitelist processUncoveredFilesFromWhitelist="true">
             <directory suffix=".php">../</directory>
         </whitelist>
+        <blacklist>
+            <directory>./Tests</directory>
+        </blacklist>
     </filter>
 
     <logging>
