--- a/Skeleton/Api/Infrastructure/Persistence/CouchDB/Repository.php.twig
+++ b/Skeleton/Api/Infrastructure/Persistence/CouchDB/Repository.php.twig
@@ -1,9 +1,9 @@
 <?php
 declare(strict_types = 1);
 
-namespace {{ projectName }}\Infrastructure\Persistence\Repository\{{ entityName }}\CouchDb;
+namespace {{ projectName }}\Infrastructure\Persistence\Repository\{{ entityName }}\CouchDB;
 
-use Sfynx\DddBundle\Layer\Infrastructure\Persistence\Generalisation\CouchDb\AbstractOneRepository;
+use Sfynx\DddBundle\Layer\Infrastructure\Persistence\Generalisation\CouchDB\AbstractOneRepository;
 use {{ projectName }}\Domain\Repository\{{ entityName }}RepositoryInterface;
 use {{ projectName }}\Infrastructure\Persistence\Repository\{{ entityName }}\TraitEntityName;
 
