--- a/Skeleton/Api/Infrastructure/EntityType/Orm.php.twig
+++ b/Skeleton/Api/Infrastructure/EntityType/Orm.php.twig
@@ -3,30 +3,53 @@ declare(strict_types = 1);
 
 namespace {{ projectName }}\Infrastructure\EntityType\Orm;
 
-use Doctrine\DBAL\Platforms\AbstractPlatform;
 use Doctrine\DBAL\Types\StringType;
 
+/**
+ * Class IdVOType
+ * @package OKKo\Infrastructure\EntityType\Orm
+ */
 class {{ voName }}Type extends StringType
 {
-    public function convertToDatabaseValue($value, AbstractPlatform $platform)
+    /**
+     * Converts a value from its PHP representation to its database representation
+     * of this type.
+     *
+     * @param mixed $value The value to convert.
+     * @return mixed The database representation of the value.
+     */
+    public function convertToDatabaseValue($value)
     {
         return (string)$value;
     }
 
-    public function convertToPHPValue($value, AbstractPlatform $platform)
+    /**
+     * Converts a value from its database representation to its PHP representation
+     * of this type.
+     *
+     * @param mixed $value The value to convert.
+     * @return mixed The PHP representation of the value.
+     */
+    public function convertToPHPValue($value)
     {
         $className = $this->getNamespace() . '\\' . $this->getName();
 
         return new $className($value);
     }
 
+    /**
+     * @return string
+     */
     public function getName()
     {
-         return '{{ voName }}';
+        return '{{ voName }}';
     }
 
+    /**
+     * @return string
+     */
     protected function getNamespace()
     {
-     return '{{ projectName }}\Domain\ValueObject';
+        return '{{ projectName }}\Domain\ValueObject';
     }
 }
