--- a/Skeleton/Api/Infrastructure/Persistence/Odm/Repository.php.twig
+++ b/Skeleton/Api/Infrastructure/Persistence/Odm/Repository.php.twig
@@ -3,7 +3,7 @@ declare(strict_types = 1);
 
 namespace {{ projectName }}\Infrastructure\Persistence\Repository\{{ entityName }}\Odm;
 
-use Sfynx\DddBundle\Layer\Infrastructure\Persistence\Generalisation\CouchDb\AbstractOneRepository;
+use Sfynx\DddBundle\Layer\Infrastructure\Persistence\Generalisation\CouchDB\AbstractOneRepository;
 use {{ projectName }}\Domain\Repository\{{ entityName }}RepositoryInterface;
 use {{ projectName }}\Infrastructure\Persistence\Repository\{{ entityName }}\TraitEntityName;
 
