--- a/Skeleton/Api/InfrastructureBundle/DependencyInjection/InfrastructureBundleExtension.php.twig
+++ b/Skeleton/Api/InfrastructureBundle/DependencyInjection/InfrastructureBundleExtension.php.twig
@@ -18,7 +18,7 @@ use Symfony\Component\DependencyInjection\{
  */
 class {{ projectName }}InfrastructureBundleExtension extends Extension
 {
-    const CONFIG_DIR = realpath(__DIR__ . '/../Resources/config/');
+    const CONFIG_DIR = __DIR__ . '/../Resources/config/';
 
     /**
      * Loads a specific configuration.
@@ -36,16 +36,17 @@ class {{ projectName }}InfrastructureBundleExtension extends Extension
         $container->setParameter('database_type', $config['database_type']);
         $container->setParameter('database_multitenant_path_file', $config['database_multitenant_path_file']);
 
+        $loaderPath = realpath(self::CONFIG_DIR . 'application');
         //todo: Create the InfrastructureBundle/Resource/config/application with all elements to load them.
         //todo: ...then, remove the @noinspection tag.
         /** @noinspection PhpUnusedLocalVariableInspection */
-        $loader = new Loader\YamlFileLoader($container, new FileLocator(self::CONFIG_DIR . 'application'));
+        $loader = new Loader\YamlFileLoader($container, new FileLocator($loaderPath));
         //$loader->load('monolog.yml');
         //$loader->load('listener.yml');
         //$loader->load('request.yml');
         //$loader->load('validator.yml');
 
-        //$loader = new Loader\XmlFileLoader($container, new FileLocator(self::CONFIG_DIR . 'application'));
+        //$loader = new Loader\XmlFileLoader($container, new FileLocator($loaderPath));
         //$loader->load('formtype.xml');
     }
 
