--- a/Skeleton/Api/PresentationBundle/DependencyInjection/PresentationBundleExtension.php.twig
+++ b/Skeleton/Api/PresentationBundle/DependencyInjection/PresentationBundleExtension.php.twig
@@ -19,7 +19,7 @@ use Symfony\Component\HttpKernel\DependencyInjection\Extension;
  */
 class {{ projectName }}PresentationBundleExtension extends Extension
 {
-    const CONFIG_DIR = realpath(__DIR__ . '/../Resources/config/');
+    const CONFIG_DIR = __DIR__ . '/../Resources/config/';
 
     /**
      * Loads a specific configuration.
@@ -34,13 +34,15 @@ class {{ projectName }}PresentationBundleExtension extends Extension
         $configuration = new Configuration();
         $this->processConfiguration($configuration, $configs);
 
-        $loader = new Loader\YamlFileLoader($container, new FileLocator(self::CONFIG_DIR . 'application'));
+        $loaderPath = realpath(self::CONFIG_DIR . 'application');
+        $loader = new Loader\YamlFileLoader($container, new FileLocator($loaderPath));
 {% for entity_name,Vo in entities %}
         $loader->load('{{ entity_name|lower }}_command.yml');
         $loader->load('{{ entity_name|lower }}_query.yml');
 {% endfor %}
 
-        $loader = new Loader\YamlFileLoader($container, new FileLocator(self::CONFIG_DIR . 'controller'));
+        $loaderPath = realpath(self::CONFIG_DIR . 'controller');
+        $loader = new Loader\YamlFileLoader($container, new FileLocator($loaderPath));
 {% for entity_name,Vo in entities %}
         $loader->load('{{ entity_name|lower }}_command.yml');
         $loader->load('{{ entity_name|lower }}_query.yml');
@@ -48,12 +50,14 @@ class {{ projectName }}PresentationBundleExtension extends Extension
         $loader->load('multiTenant.yml');
         $loader->load('swagger.yml');
 
-        $loader = new Loader\YamlFileLoader($container, new FileLocator(self::CONFIG_DIR . 'file/multiTenant'));
+        $loaderPath = realpath(self::CONFIG_DIR . 'file/multiTenant');
+        $loader = new Loader\YamlFileLoader($container, new FileLocator($loaderPath));
 {% for entity_name,Vo in entities %}
         $loader->load('{{ entity_name|lower }}_multiTenant.yml');
 {% endfor %}
 
-        $loader = new Loader\YamlFileLoader($container, new FileLocator(self::CONFIG_DIR . 'route'));
+        $loaderPath = realpath(self::CONFIG_DIR . 'route');
+        $loader = new Loader\YamlFileLoader($container, new FileLocator($loaderPath));
 {% for entity_name,Vo in entities %}
         $loader->load('{{ entity_name|lower }}_command.yml');
         $loader->load('{{ entity_name|lower }}_query.yml');
