--- a/Skeleton/Api/Tests/Application/Command/PatchCommandTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Command/PatchCommandTest.php.twig
@@ -15,13 +15,13 @@ class PatchCommandTest extends \PHPUnit_Framework_TestCase
 
     public function setUp()
     {
-        $this->libelle="FRANCe";
-        $this->indicatif="033";
-        $this->iso="FR";
-        $this->selectable=true;
-        $this->reference="001";
+{% set constructorArgs = "" %}
+{% for field in entityFields %}
+        $this->{{ field.name }} = "123456";
+{% set constructorArgs = constructorArgs ~ "$this->" ~ field.name ~ ", " %}
+{% endfor %}
 
-        $this->command = new NewCommand($this->libelle,$this->indicatif,$this->iso,$this->selectable,$this->reference);
+        $this->command = new PatchCommand({{ constructorArgs|trim(', ') }});
     }
 
     public function testInterface()
