Change use of PatchCommandTest

--- a/Skeleton/Api/Tests/Application/Command/PatchCommandTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Command/PatchCommandTest.php.twig
@@ -3,7 +3,7 @@ declare(strict_types = 1);
 
 namespace  Tests\Application\{{ entityName }}\Command;
 
-use {{ projectName }}\Application\{{ entityName }}\Command\NewCommand;
+use {{ projectName }}\Application\{{ entityName }}\Command\PatchCommand;
 use Sfynx\DddBundle\Layer\Application\Generalisation\Interfaces\CommandInterface;
 
 class PatchCommandTest extends \PHPUnit_Framework_TestCase
