--- a/Skeleton/Api/Domain/Service/Manager/Manager.php.twig
+++ b/Skeleton/Api/Domain/Service/Manager/Manager.php.twig
@@ -19,6 +19,9 @@ use Sfynx\DddBundle\Layer\Domain\Generalisation\Processor\{
 };
 use Sfynx\DddBundle\Layer\Infrastructure\Logger\Generalisation\TraitLogger;
 use {{ projectName }}\Domain\Entity\{{ entityName }};
+{% for vo in valueObjects %}use {{ vo.type|trim("\\") }};
+{% endfor %}
+use Sfynx\DddBundle\Layer\Infrastructure\Exception\DomainException;
 
 /**
  * Class {{ entityName }}Manager.
@@ -43,6 +46,7 @@ class {{ entityName }}Manager extends AbstractManager implements ProcessorInterf
 {% for field in entityFields %}     * @param {% if field.type == "id" %}{% if field.voName is defined %}{{ field.voName }}{% else %}int{% endif %}{% else %}string{% endif %} ${{ field.name }}
 {% endfor %}
      * @return {{ entityName }}
+     * @throws DomainException
      */
     public function create({{ constructorArgs }}): {{ entityName }}
     {
@@ -74,6 +78,7 @@ class {{ entityName }}Manager extends AbstractManager implements ProcessorInterf
 {% for field in entityFields %}     * @param {% if field.type == "id" %}{% if field.voName is defined %}{{ field.voName }}{% else %}int{% endif %}{% elseif field.type == "idVO" %}string{% else %}{{ field.type }}{% endif %} ${{ field.name }}
 {% endfor %}
      * @return {{ entityName }}
+     * @throws DomainException
      */
     public function update({{ constructorArgs }}): {{ entityName }}
     {
