--- a/Skeleton/Api/Domain/Service/CouchDB/RepositoryFactory.php.twig
+++ b/Skeleton/Api/Domain/Service/CouchDB/RepositoryFactory.php.twig
@@ -22,7 +22,7 @@ use {{ projectName }}\Domain\Repository\{{ entityName }}RepositoryInterface;
  * @package Domain
  * @subpackage Service\CouchDB
  */
-class RepositoryFactory //implements RepositoryFactoryInterface
+class RepositoryFactory implements RepositoryFactoryInterface
 {
     //use TraitRepositoryFactory;
 
