--- a/Skeleton/Api/Domain/Workflow/Listener/WFGenerateVOListener.php.twig
+++ b/Skeleton/Api/Domain/Workflow/Listener/WFGenerateVOListener.php.twig
@@ -47,6 +47,7 @@ class WFGenerateVOListener implements ObserverInterface
     /**
      * @param ObservableInterface $wfHandler
      * @return $this
+     * @throws DomainException
      */
     public function set{{ field.name|capitalize }}(ObservableInterface $wfHandler)
     {
